--- a/docs/style.css
+++ b/docs/style.css
@@ -8,21 +8,33 @@ h2 {
 #se2may {
 }
 .error {
-  color: red;
+	color: red;
 	border: 1px solid gray;
+	margin-inline: 20px;
+	margin-block: 10px;
+	padding: 10px;
+	background-color: beige;
 }
 .fold {
 	display: none;
+	border: 1px solid firebrick;
+	padding-block: 10px;
+	padding-inline: 20px;
 }
-a {
+a,.foldbutton {
 	color: crimson;
 }
 a:visited {
 	color: maroon;
 }
-a:hover {
+a:hover,.foldbutton:hover {
 	color: indianred;
 }
 a.pun:hover {
 	color: chocolate;
+}
+.foldbutton{
+	background: none;
+	border: none;
+	font: inherit;
 }
